# digital-coop

./: .gitignore  README.md  package.json
backend/: Cargo.toml  README.md  database.hpdb  food_items.py
backend/src/: main.rs  schema.rs
public/: index.html
src/: App.js  index.css
